--- a/src/components/heroesList/heroesList.scss
+++ b/src/components/heroesList/heroesList.scss
@@ -1,17 +1,19 @@
 .hero-enter {
   opacity: 0;
+  transform: scale(0.9);
 }
-
 .hero-enter-active {
   opacity: 1;
-  transition: opacity 500ms ease-in;
+  transform: scale(1);
+  transition: opacity 500ms ease-in-out, transform 500ms ease-in-out;
 }
 
 .hero-exit {
   opacity: 1;
+  transform: scale(1);
 }
-
 .hero-exit-active {
   opacity: 0;
-  transition: opacity 500ms ease-in;
+  transform: scale(0.9);
+  transition: opacity 300ms ease-in-out, transform 300ms ease-in-out;
 }
